--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*{
+    margin: 0;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+div button{
+    background-color: black;
+    cursor: pointer;
+    border: none;
+    width: 70px;
+    height: 30px;
+    
+  
+   
+    color: white;
+   
+    
+    
+}
+
+button:hover{
+    background-color: black;
+    color: white;
+
+}
+div input{
+    border-color: black;
+    outline: none;
+    border-width: 1px;
+    margin: 3px;
+    column-gap: 5px;
 }
